# SPECTRA-Lab

./: .gitignore  API_CONNECTION_FIX.md  AUTOML_INTEGRATION_PLAN.md  AUTOML_INTEGRATION_PROGRESS.md  COMPLETE_INTEGRATION_REPORT.md  CVD_INTEGRATION_COMPLETE.md  CVD_INTEGRATION_FINAL.md  CVD_PLATFORM_COMPLETION_SUMMARY.md  CVD_QUICKSTART_GUIDE.md  DIFFUSION_DATA_SEEDED.md  DIFFUSION_MODULE_INTEGRATION_MAP.md  DIFFUSION_MODULE_INTEGRATION_STATUS.md  FILE_MANIFEST.txt  FILE_PROCESSING_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  MASTER_IMPLEMENTATION_GUIDE.md  MERGE_INSTRUCTIONS.md  Makefile  README.md  SECTION_7_IMPLEMENTATION_STATUS.md  SESSION_11_12_INTEGRATION_SUMMARY.md  SESSION_13_14_INTEGRATION_SUMMARY.md  SESSION_17.md  SESSION_17_INTEGRATION.md  SESSION_2_INTEGRATION_COMPLETE.md  SYSTEM_STATUS.md  Semiconductor Characterization Platform - Master Roadmap  Semiconductor lab Repository Structure  SemiconductorLab: Enterprise Characterization Platform  Session11_Package_Contents.md  TROUBLESHOOTING.md  add-use-client.py  deploy_session17.sh  docker-compose.yml  fix-quotes.py  fix-quotes.sh  generate_ddl.py  (+9 more)
Diffusion Module Skeleton Package/: README.md  SESSION_1_STATUS.md  START_HERE.md  changepoint.py  cusum.py  pyproject.toml  requirements.txt  run_oxidation_sim.py  schemas.py
Diffusion Module Skeleton Package/mnt/user-data/outputs/diffusion_oxidation_session1/api/: __init__.py
Diffusion Module Skeleton Package/mnt/user-data/outputs/diffusion_oxidation_session1/core/: __init__.py
(+894 files in other folders)
